Se le dio estilo al login, signup. Falta deployar el examen y agregar boton de detail

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,42 +1,56 @@
 {{!-- views/auth/signup.hbs --}}
+<div class="container-login">
+  <div class="row m-0 h-100">
+    <div class="col p-0 text-center d-flex justify-content-center align-items-center display-none">
+      <img src="../../images/signup-background.png" class="w-100 image-login">
+    </div>
+    <div class="col p-0 bg-custom d-flex justify-content-center align-items-center flex-column w-100">
+      <form class="w-75" action="/signup" method="POST">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" name="name" placeholder="Nombre">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Apellido</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" name="lastName" placeholder="Apellido">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Correo</label>
+          <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}" class="form-control"
+            id="exampleFormControlInput1" name="email" placeholder="Correo">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Empresa</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" name="company"
+            placeholder="Nombre de la Empresa">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Sector</label>
+          <select name="sector" class="form-control">
+            {{#each this.sector}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Puesto</label>
+          <select name="position" class="form-control">
+            {{#each this.position}}
+            <option value="{{this}}">{{this}}</option>
+            {{/each}}
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleFormControlInput2" name="password" placeholder="*********">
+        </div>
+            {{#if errorMessage}}
+      <p>{{errorMessage}}</p>
+      {{/if}}
 
-<div id="signup">
-  <h2>Registrarse</h2>
-  <form action="/signup" method="POST">
-
-
-    <label for="input-username"> Nombre </label>
-    <input type="text" name="name" placeholder="Nombre" />
-    <label for="input-username"> Apellido </label>
-    <input type="text" name="lastName" placeholder="Apellido" />
-
-    <label for="input-email"> Correo </label>
-    <input pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}" type="email" id="input-email" name="email"
-      placeholder="Correo" />
-
-    <label for="input-username"> Empresa </label>
-    <input type="text" name="company" placeholder="Nombre de la Empresa" />
-    
-    <label for="input-username">Sector</label>
-    <select name="sector">
-    {{#each this.sector}}
-    <option value="{{this}}">{{this}}</option>
-    {{/each}} 
-    </select>
-
-    <label for="input-username"> Puesto</label>
-    <select name="position">
-    {{#each this.position}}
-    <option value="{{this}}">{{this}}</option>
-    {{/each}}
-    </select>
-
-    <label for="input-password"> Contraseña </label>
-    <input type="password" name="password" id="input-password" placeholder="********" />
-
-    <button type="submit">Crear Cuenta</button>
-  </form>
-  {{#if errorMessage}}
-  <p>{{errorMessage}}</p>
-  {{/if}}
+        <button type="submit" class="btn btn-custom btn-lg btn-block mt-3 btn-crear-cuenta">Crear Cuenta</button>
+      </form>
+  
+    </div>
+  </div>
 </div>
