--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,86 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+  padding: 0;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  padding: 0;
+}
 
 a {
-  color: #00B7FF; }
+  color: #00B7FF;
+}
+
+.image-login {
+  padding-top: 50px;
+}
+
+.container-login {
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  font-family: "Nunito Sans";
+}
+
+.form-control {
+  line-height: 2;
+}
+
+.bg-custom {
+  background-color: #6C63FF;
+}
+
+.btn-custom {
+  background-color: #3e3d56;
+  color: #fff;
+}
+
+.btn-custom:hover {
+  background-color: #33313f;
+  color: #fff;
+}
+
+label {
+  color: #fff;
+}
+
+a,
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+}
+
+
+
+@media(max-width: 932px) {
+  .display-none {
+    display: none !important;
+  }
+}
+
+.btn-crear-cuenta {
+  margin-bottom: 20px;
+}
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.header-test {
+  background-color: #6C63FF;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
