--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,18 +1,39 @@
 {{!-- views/auth/login.hbs --}}
- 
-<div id="form">
+
+{{!-- <div id="form">
   <h2>Iniciar Sesión</h2>
   <form action="/login" method="POST">
     <label for="input-email">Correo</label>
     <input type="text" id="input-email" name="email" placeholder="Correo" />
- 
+
     <label for="input-password">Contraseña</label>
     <input type="password" name="password" id="input-password" placeholder="********" />
- 
+
     <button type="submit">Iniciar Sesión</button>
- 
-    {{#if errorMessage}}
-      <p class="error">{{errorMessage}}</p>
-    {{/if}}
   </form>
+</div> --}}
+
+
+<div class="container-login">
+  <div class="row m-0 h-100">
+    <div class="col p-0 text-center d-flex justify-content-center align-items-center display-none">
+      <img src="../../images/login-backgroun.png" class="w-100 image-login">
+    </div>
+    <div class="col p-0 bg-custom d-flex justify-content-center align-items-center flex-column w-100">
+      <form class="w-75" action="/login" method="POST">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Correo</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" name="email" placeholder="Correo">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="exampleFormControlInput2" name="password" placeholder="*********">
+        </div>
+        <button type="submit" class="btn btn-custom btn-lg btn-block mt-3">Iniciar Sesión</button>
+      </form>
+      {{#if errorMessage}}
+      <p class="error">{{errorMessage}}</p>
+      {{/if}}
+    </div>
+  </div>
 </div>
