--- a/views/tests-display.hbs
+++ b/views/tests-display.hbs
@@ -1,10 +1,31 @@
+<section class="py-5 text-center container">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">EverlyTest</h1>
+      <p class="lead text-muted">Evaluación previa para filtrar candidatos</p>
+      <p>
+        <a href="/signup" class="btn btn-primary my-2">Registrar</a>
+        <a href="/login" class="btn btn-secondary my-2">Iniciar Sesión</a>
+      </p>
+    </div>
+  </div>
+  <form method="POST" action="/tests">
+    <div class="mb-3">
+      <input type="text" class="form-control" id="exampleInputEmail1" name="position">
+    </div>
+    <button type="submit" class="btn btn-primary">Buscar</button>
+  </form>
+</section>
 
-<form action="/tests" method="POST">
-<input type="text" name="position" placeholder="Insertar puesto, herramienta y tipo de examen">
-<button type="submit">Buscar</button>
-</form>
-{{#each this.tests}}
-  <img src="{{this.url}}" alt="{{this.name}}">
-  <p>{{this.name}}</p>
-  <p>{{this.description}}</p>
-{{/each}}
+<div class="album py-5 bg-light">
+  <div class="container">
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      {{#each this.tests}}
+      {{> examCard this}}
+      {{/each}}
+    </div>
+  </div>
+</div>
+
+</main>
