--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,55 @@
 body {
-  padding: 50px;
+  padding:0;
+  margin:0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+.container-login {
+  padding: 0;
+  margin: 0;
+  height: 100vh;
+  font-family: "Nunito Sans";
+}
+
+.form-control {
+  line-height: 2;
+}
+
+.bg-custom {
+  background-color: #6C63FF;
+}
+
+.btn-custom {
+  background-color: #3e3d56;
+  color: #fff;
+}
+
+.btn-custom:hover {
+  background-color: #33313f;
+  color: #fff;
+}
+
+label {
+  color: #fff;
+}
+
+a,
+a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+}
+
+@media(max-width: 932px) {
+  .display-none {
+    display: none !important;
+  }
 }
