--- a/views/partials/examCard.hbs
+++ b/views/partials/examCard.hbs
@@ -1,16 +1,14 @@
 <div class="col">
-  <div class="card shadow-sm" style="height: 350px;">
-    <img class="bd-placeholder-img card-img-top" src="{{this.url}}" width="100%" height="200px" />
+  <div class="card shadow-sm">
+    <img class="bd-placeholder-img card-img-top" src="{{this.url}}" width="50px" height="200px" />
     <div class="card-body">
       <h5 class="card-title header-test">{{this.name}}</h5>
       <p class="card-text">{{this.description}}</p>
       <div class="d-flex justify-content-between align-items-center">
-        {{#if this.addExam}}
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+          <button type="button" style="background-color: #0d6efd;"><a
+              href="/tests/{{this._id}}">Detalles</a></button>
         </div>
-        {{/if}}
         <small class="text-muted">{{this.duration}} mins</small>
       </div>
     </div>
