--- a/views/tests-display.hbs
+++ b/views/tests-display.hbs
@@ -11,7 +11,7 @@
   </div>
   <form method="POST" action="/tests">
     <div class="mb-3">
-      <input type="text" class="form-control" id="exampleInputEmail1" name="position">
+      <input type="text" class="form-control" id="exampleInputEmail1" name="position" pla>
     </div>
     <button type="submit" class="btn btn-primary">Buscar</button>
   </form>
@@ -19,13 +19,10 @@
 
 <div class="album py-5 bg-light">
   <div class="container">
-
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" style="width: 100%;">
       {{#each this.tests}}
       {{> examCard this}}
       {{/each}}
     </div>
   </div>
 </div>
-
-</main>
