--- a/views/partials/createGroup.hbs
+++ b/views/partials/createGroup.hbs
@@ -1,4 +1,4 @@
-<div class="col">
+<div class="col">   
   <div class="card shadow-sm">
     <img class="bd-placeholder-img card-img-top" src="../{{this.url}}" width="50px" height="200px" />
     <div class="card-body">
@@ -6,10 +6,13 @@
       <p class="card-text">{{this.description}}</p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" style="background-color: #0d6efd;"><a
-              href="/tests/{{this._id}}">Detalles</a></button>
+          <form action="/user-profile/create-test">
+          
+            <button type="button" style="background-color: #0d6efd;">Agregar</button>
+          </form>
         </div>
-        <small class="text-muted">{{this.duration}} mins</small>
+        <small class="text-muted">{{this.duration}} hola</small>
+        <p>{{../this.groupTestId}}hola</p>
       </div>
     </div>
   </div>
