--- a/views/user/choose-tests.hbs
+++ b/views/user/choose-tests.hbs
@@ -1,9 +1,46 @@
+<button><a href="/user-profile" style="color: black;">Guardar</a></button>
+
 <div class="album py-5 bg-light">
   <div class="container">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" style="width: 100%;">
-      {{#each this.allTest}}
-      {{> examCard this}}
-      {{/each}}
+      {{#each this.aggTest}}
+      <div class="col">
+        <div class="card shadow-sm">
+          <img class="bd-placeholder-img card-img-top" src="../{{this.url}}" width="50px" height="200px" />
+          <div class="card-body">
+            <h5 class="card-title header-test">{{this.name}}</h5>
+            <p class="card-text">{{this.description}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <form action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
+                  <input type="hidden" name="idTestErase" value="{{this._id}}">
+                  <button type="submit" style="background-color: red;">Quitar</button>
+                </form>
+              </div>
+              <small class="text-muted">{{this.duration}} minutes</small>
+            </div>
+          </div>
+        </div>
+        {{/each}}
+        {{#each this.missingTest}}
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="bd-placeholder-img card-img-top" src="../{{this.url}}" width="50px" height="200px" />
+            <div class="card-body">
+              <h5 class="card-title header-test">{{this.name}}</h5>
+              <p class="card-text">{{this.description}}</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <form action="/user-profile/create-test/{{../this.groupTest._id}}" method="POST">
+                    <input type="hidden" name="idTestAdd" value="{{this._id}}">
+                    <button type="submit" style="background-color: #0d6efd;">Agregar</button>
+                  </form>
+                </div>
+                <small class="text-muted">{{this.duration}} minutes</small>
+              </div>
+            </div>
+          </div>
+          {{/each}}
+        </div>
+      </div>
     </div>
-  </div>
-</div>
