The login tester is created and double populated

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,5 +2,5 @@
 <p>Welcome to {{title}}</p>
 <a href="/login" style="color: black;">Registrar</a>
 <a href="/signup" style="color: black;">Iniciar Sesion</a>
-<a href="/tester" style="color: black;">Tester</a>
+<a href="/login-tester" style="color: black;">Tester</a>
 <a href="/tests" style="color: black;">Tests</a>
