--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -20,6 +20,7 @@
       <img src="../../images/login-backgroun.png" class="w-100 image-login">
     </div>
     <div class="col p-0 bg-custom d-flex justify-content-center align-items-center flex-column w-100">
+      <h1 style="color: white;margin-top: 50px;">Iniciar Sesion</h1>
       <form class="w-75" action="/login" method="POST">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Correo</label>
@@ -27,7 +28,8 @@
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput2" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="exampleFormControlInput2" name="password" placeholder="*********">
+          <input type="password" class="form-control" id="exampleFormControlInput2" name="password"
+            placeholder="*********">
         </div>
         <button type="submit" class="btn btn-custom btn-lg btn-block mt-3">Iniciar Sesión</button>
       </form>
