--- a/views/tests-display.hbs
+++ b/views/tests-display.hbs
@@ -1,20 +1,6 @@
-<section class="py-5 text-center container">
-  <div class="row py-lg-5">
-    <div class="col-lg-6 col-md-8 mx-auto">
-      <h1 class="fw-light">EverlyTest</h1>
-      <p class="lead text-muted">Evaluación previa para filtrar candidatos</p>
-      <p>
-        <a href="/signup" class="btn btn-primary my-2">Registrar</a>
-        <a href="/login" class="btn btn-secondary my-2">Iniciar Sesión</a>
-      </p>
-    </div>
-  </div>
-  <form method="POST" action="/tests">
-    <div class="mb-3">
-      <input type="text" class="form-control" id="exampleInputEmail1" name="position" pla>
-    </div>
-    <button type="submit" class="btn btn-primary">Buscar</button>
-  </form>
+{{!-- <section class="py-5 text-center container">
+
+
 </section>
 
 <div class="album py-5 bg-light">
@@ -25,4 +11,59 @@
       {{/each}}
     </div>
   </div>
-</div>
+</div> --}}
+
+<!-- component -->
+<section class="py-5 text-center container" style="padding-bottom: 50px;">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light" style="font-size: 50px;">EverlyTest</h1>
+      <p class="lead text-muted">Evaluación previa para filtrar candidatos</p>
+      <p>
+        <a href="/signup" class="btn btn-primary my-2">Registrar</a>
+        <a href="/login" class="btn btn-secondary my-2">Iniciar Sesión</a>
+      </p>
+    </div>
+  </div>
+  <form method="POST" action="/tests">
+    <div class="mb-3">
+      <input style="text-align: center;" type="text" class="form-control" id="exampleInputEmail1" name="position" placeholder="Buscar la posicion que quieres cubrir, herramientas o pruebas para tus candidatos">
+    </div>
+    <button type="submit" class="btn btn-primary">Buscar</button>
+  </form>
+</section>
+<section class="py-12">
+  <div class="container mx-auto">
+    <div class="flex flex-wrap px-6">
+      {{#each this.tests}}
+      <div class="w-full lg:w-1/2   md:px-4 lg:px-6 py-5">
+        <div class="bg-white hover:shadow-xl">
+          <div class="">
+            <img src="../{{this.url}}" alt="" class="h-56 w-full border-white border-8 hover:opacity-25">
+          </div>
+          <div class="px-4 py-4 md:px-10">
+            <h1 class="font-bold text-lg">
+              {{name}}
+            </h1>
+            <p class="py-4">
+              {{description}}
+            </p>
+            <div class="flex flex-wrap pt-8">
+              <div class="w-full md:w-1/3 text-sm font-medium">
+                {{duration}} minutos
+              </div>
+              <div class="2/3">
+                <div class="text-sm font-medium">
+                  <a href="/tests/{{this._id}}" class="text-blue-700 px-1 ">
+                    Detalle
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {{/each}}
+    </div>
+  </div>
+</section>
